# antimatter-dimensions-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  blog.md  pyproject.toml
crates/ad-core/: ARCHITECTURE.md  Cargo.toml
crates/ad-core/src/: achievements.rs  action.rs  autobuyers.rs  automator_points.rs  black_holes.rs  break_infinity_upgrades.rs  challenges.rs  cost_scaling.rs  crunch.rs  dilation.rs  dimensions.rs  eternity.rs  eternity_challenges.rs  eternity_milestones.rs  eternity_upgrades.rs  galaxy.rs  glyphs.rs  infinity_challenges.rs  infinity_dimensions.rs  infinity_upgrades.rs  lib.rs  observed.rs  options.rs  perks.rs  reality.rs  reality_upgrades.rs  records.rs  replicanti.rs  sacrifice.rs  simulator.rs  state.rs  tab_notifications.rs  tick.rs  tickspeed.rs  time_dimensions.rs  time_studies.rs  tutorial.rs
crates/ad-core/src/automator/: blocks.rs  compile.rs  exec.rs  lexer.rs  mod.rs  parser.rs  program.rs  templates.rs  transfer.rs
crates/ad-core/src/celestials/: alchemy.rs  effarig.rs  enslaved.rs  imaginary_upgrades.rs  laitela.rs  mod.rs  pelle.rs  ra.rs  singularity.rs  teresa.rs  v.rs
crates/ad-core/src/data/: constants.rs  dimensions.rs  mod.rs
crates/ad-core/src/save/: bundle.rs  codec.rs  default_player.json  dto.rs  encode.rs  mod.rs
crates/ad-core/tests/: autobuyers.rs  integration.rs  simulator.rs
crates/ad-core/tests/fixtures/: ad_initial_save.txt  ad_sample_save.txt
crates/ad-fidelity/: Cargo.toml  README.md  package.json
crates/ad-fidelity/capture/: README.md  package.json  save-server.js  userscript.js
crates/ad-fidelity/fixtures/: pre-infinity.json
crates/ad-fidelity/js-harness/: generate-fixtures.js  loader.js  package.json  shims.js
crates/ad-fidelity/oracle/: README.md  generate-replay-fixtures.js  package-lock.json  package.json
crates/ad-fidelity/src/: allowlist.rs  compare.rs  fixture.rs  lib.rs  main.rs  report.rs  resolve.rs  run.rs  tolerance.rs  trace.rs
crates/ad-fidelity/tests/: fixture_tests.rs  replay_smoke.rs  section1_dimension_costs.rs  section2_buy10_multiplier.rs  section3_dimboost.rs  section4_tickspeed.rs  section5_galaxies.rs  section6_sacrifice.rs  section7_production.rs
crates/ad-format/: Cargo.toml
crates/ad-format/src/: exponent.rs  lib.rs  mantissa.rs  options.rs  router.rs  wasm.rs
crates/ad-format/src/exponent/: tests.rs
crates/ad-format/src/notations/: engineering.rs  infinity.rs  letters.rs  logarithm.rs  mixed_engineering.rs  mixed_scientific.rs  mod.rs  scientific.rs  standard.rs
crates/ad-format/src/router/: tests.rs
crates/ad-format/tests/: format_edge_cases.rs  gen_format_cases.mjs  notations.rs  rounding_divergence.rs
crates/ad-gui/: AGENTS.md  Cargo.toml  tauri.conf.json
crates/ad-gui/capabilities/: default.json
crates/ad-gui/frontend/: index.html  package-lock.json  package.json  vite.config.js
crates/ad-gui/frontend/src/: App.vue  app-shell.css  main.js
crates/ad-gui/frontend/src/components/: AnimationOptionsModal.vue  AntimatterGalaxyConfirmModal.vue  AwayProgressOptionsModal.vue  BackupWindowModal.vue  BigCrunchConfirmModal.vue  BigCrunchScreen.vue  BreakInfinityButton.vue  ConfirmModal.vue  CreditsDisplay.vue  DilationConfirmModal.vue  DimBoostRow.vue  DimensionBoostConfirmModal.vue  DimensionRow.vue  EternityButton.vue  EternityConfirmModal.vue  GalaxyRow.vue  GameHeader.vue  GeneralTooltip.vue  GlyphComponent.vue  GlyphSacrificeConfirmModal.vue  H2PModal.vue  HardResetModal.vue  HeaderBigCrunchButton.vue  HeaderChallengeDisplay.vue  HiddenTabsModal.vue  HotkeysModal.vue  ImportSaveModal.vue  InfoButtons.vue  InfoDisplayOptionsModal.vue  LoadGameModal.vue  Modal.vue  ModalConfirmationCheck.vue  NotationModal.vue  NotificationContainer.vue  OfflineProgressModal.vue  OfflineSummaryModal.vue  ProgressBar.vue  RealityButton.vue  RealityModal.vue  ResetRealityModal.vue  (+5 more)
crates/ad-gui/frontend/src/config/: sidebarResources.js  tabs.js
crates/ad-gui/frontend/src/data/: achievements.js  automatorBlocks.js  automatorDocs.js  (+16 more)
crates/ad-gui/icons/: icon.icns
crates/ad-gui/src/: commands.rs  main.rs  persistence.rs  views.rs
crates/ad-python/: Cargo.toml  build.rs
crates/ad-python/src/: lib.rs  types.rs
crates/ad-sim/: ARCHITECTURE.md  Cargo.toml
crates/ad-sim/src/: controller.rs  lib.rs  simulator.rs  strategy.rs
crates/ad-sim/tests/: simulator.rs
crates/break_infinity/: Cargo.toml
crates/break_infinity/src/: lib.rs  macros.rs  serde_string.rs  tests.rs
(+219 files in other folders)
