[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "antimatter-dimensions"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
    "marimo>=0.13",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "taskipy>=1.14",
]

[tool.maturin]
manifest-path = "crates/ad-python/Cargo.toml"
python-source = "python"
module-name = "antimatter_dimensions._native"

[tool.ruff]
line-length = 89

[tool.taskipy.tasks]
format = "ruff format python/"
check-style = "ruff check python/"
