[package]
name = "ad-core"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "break_infinity/serde", "dep:flate2", "dep:base64", "dep:serde_json"]

[dependencies]
break_infinity = { path = "../break_infinity" }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
flate2 = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
