[package]
name = "ad-fidelity"
version = "0.1.0"
edition = "2021"
description = "Fidelity test harness comparing Rust ad-core against the original JS game"

[[bin]]
name = "ad-fidelity"
path = "src/main.rs"

[dependencies]
ad-core = { path = "../ad-core", features = ["serde"] }
break_infinity = { path = "../break_infinity" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
