[package]
name = "ad-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ad-core = { path = "../ad-core", features = ["serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
