[package]
name = "ad-python"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "_native"

[dependencies]
ad-core = { path = "../ad-core" }
ad-sim = { path = "../ad-sim" }
break_infinity = { path = "../break_infinity" }
pyo3 = { version = "0.25", features = ["extension-module"] }
