[package]
name = "ad-sim"
version = "0.1.0"
edition = "2021"
# ad-sim's integration tests (tests/) are disabled for now: after game-logic
# changes some playthroughs can run long, and the suite needs revisiting. We only
# require the crate itself to keep compiling (`cargo build`/`cargo check`);
# `autotests = false` drops tests/ from the build graph. Flip back to re-enable.
autotests = false

[dependencies]
ad-core = { path = "../ad-core" }
break_infinity = { path = "../break_infinity" }
