[package]
name = "break_infinity"
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"
description = "Vendored: A library for larger numbers up to 1e9e15 in Rust for Incremental Games"

[features]
serde = ["dep:serde"]

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
